--- a/_posts/2019-06-29-the-us-narrative-today.html
+++ b/_posts/2019-06-29-the-us-narrative-today.html
@@ -2463,107 +2463,107 @@ stories:
   domain: http://www.thearknewspaper.com/
   link: https://www.thearknewspaper.com/single-post/2019/06/05/Tiburon-jazz-musician-aims-to-forge-connections-through-music
 images:
-- name: flower-barbed-wire-flower-barbed-wire-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-blue-electricity.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night.jpg
-- name: blossombar-crafty-painting-file-00-00-50-12.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-crafty-painting-file-00-00-50-12.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-china-prop.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-china-prop.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-feed-people.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-feed-people.jpg
-- name: downtheline-downtheline-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-dark-soul.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-horiz-circuit.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-horiz-circuit.JPG
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-alberto-giacometti.jpg
-- name: white-house-lawn-white-house-window-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-sunday.jpg
-- name: oldhousecars-house-old-cars-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-post-modern.jpg
-- name: old-door-lock-old-door-lock-2-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-far-away.jpg
-- name: status-berlin-status-berlin-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-blue-brush.jpg
-- name: flower-barbed-wire-flower-barbed-wire-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-purple-pond.jpg
-- name: blossombar-really-hot-file-00-00-24-99.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-really-hot-file-00-00-24-99.jpg
-- name: stories-new-76-135-800-500-0-max-0-1--1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-76-135-800-500-0-max-0-1--1.jpg
-- name: school-clouds-church-clouds-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-creativity.jpg
-- name: oldtrain-oldtrain-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-matrix.jpg
-- name: razorwire-DSC-0080-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-matrix.jpg
-- name: lincoln-memorial-lincolnmemorial-propaganda-leaflets.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-propaganda-leaflets.jpg
-- name: fence-mexico-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-blue-electricity.jpg
-- name: abe-lincoln-one-yellow-paper-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-yellow-paper-file-00-00-00-00.jpg
-- name: eduardo-eduardo-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-yellow-paper.jpg
-- name: windowmountain-window-mountain-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-colorful-dream.jpg
-- name: oldhouse-granaryfield-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-constitution.jpg
-- name: christianity-christianity-under-construction-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-kandinsky-bv.jpg
-- name: statue-of-liberty-front-view-statueofliberty-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-far-away.jpg
-- name: birdhouse-birdhouse-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-light-dali.jpg
-- name: hollywood-building-hollywood-building-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-dark-rain.jpg
-- name: status-berlin-status-berlin-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-constitution.jpg
-- name: old-gas-pumps-oldgaspumps-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-kand-two.jpg
-- name: old-gas-pumps-oldgaspumps-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-wols.jpg
-- name: oldsmallboat-oldsmallboat-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-atari-missle.jpg
-- name: downtown-trucksilo-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-alien-goggles.jpg
-- name: old-cabin-oldcabin-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-colorful-blocks.jpg
-- name: apartment-window-apartment-window-leaves.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/apartment-window-apartment-window-leaves.jpg
-- name: store-on-corner-store-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-sand-paper.jpg
-- name: oldsmallboat-oldsmallboat-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-emily-carr.jpg
-- name: cargo-ship-cargo-ship-on-sea-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-kand-two.jpg
-- name: oldroad-old-road-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-constitution.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-gan-vogh.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-gan-vogh.JPG
-- name: aws-s3-square-fredericksburg-downtown-flag-square.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-fredericksburg-downtown-flag-square.jpg
-- name: oldcabin-store-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-ww2-dresden.jpg
-- name: oldtrain-oldtrain-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-bright-sand.jpg
-- name: white-house-lawn-white-house-window-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-dali-three.jpg
-- name: art-museum-art-museum-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-purple-pond.jpg
-- name: san-francisco-street-view-san-francisco-street-view-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-sand-paper.jpg
-- name: paris-paris-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-dark-dali.jpg
-- name: oldhotel-oldhotel-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-hot-spicy.jpg
-- name: bordercrossing-bordercrossing-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-alberto-giacometti.jpg
-- name: window-window-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-aqua.jpg
-- name: carry-load-carryload-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-purple-storm.jpg
+- name: windowmountain-window-mountain-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-crunch-paper.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-gred-mash.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-gred-mash.png
+- name: castle-wall-DSC-0067-smooth-ride.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-smooth-ride.JPG
+- name: san-francisco-street-view-san-francisco-street-view-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-dark-soul.jpg
+- name: bordercrossing-bordercrossing-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-light-dali.jpg
+- name: yuma-bank-yuma-bak-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yuma-bank-yuma-bak-colorful-dream.jpg
+- name: amusement-park-amusement-park-2-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-sunday.jpg
+- name: hollywood-building-hollywood-building-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-colored-circuits.jpg
+- name: mosaic-face-mosaic-face-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-purple-pond.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-rainbow-festival.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-rainbow-festival.png
+- name: stories-catacombs-copper-circuit-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-catacombs-copper-circuit-2.jpg
+- name: san-francisco-street-view-san-francisco-street-view-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-creativity.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-light-dali.jpg
+- name: liberty-back-statue-liberty-back-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-graham-sutherland.jpg
+- name: white-house-lawn-white-house-lawn-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-colored-circuits.jpg
+- name: old-church-oldchurch-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-blue-circuit.jpg
+- name: server-cloud-server-racks-clouds-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-light-dali.jpg
+- name: dc-statue-dcstatue-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-yellow-paper.jpg
+- name: beach-clouds-lifeguard-beachclouds-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-blue-circuit.jpg
+- name: stories-36349148770-1a9d2692b2-z.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-36349148770-1a9d2692b2-z.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh.JPG
+- name: flower-barbed-wire-flower-barbed-wire-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-atari-asteroids.jpg
+- name: berlinwall2-berlinwall-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-post-modern.jpg
+- name: castle-wall-DSC-0067-smoking-cigarette.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-smoking-cigarette.JPG
+- name: fence-fence-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-colored-circuits.jpg
+- name: yuma-bank-yuma-bak-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yuma-bank-yuma-bak-bright-sand.jpg
+- name: subway-subway-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-blue-electricity.jpg
+- name: stories-sand-hand-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-sand-hand-light-dali.jpg
+- name: locked-up-steam-lock-up-steam-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-clean-view.jpg
+- name: status-berlin-status-berlin-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-alberto-giacometti.jpg
+- name: cargo-ship-cargo-ship-on-sea-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-gan-vogh.jpg
+- name: carry-load-carryload-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-gred-mash.jpg
+- name: fence-fence-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-nazi-poster.jpg
+- name: containership-containership-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-dali-three.jpg
+- name: old-school-house-old-schoolhouse-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-oily-mcoilface.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-blue-granite.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-blue-granite.png
+- name: rain-princess-IMG_4746.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-IMG_4746.jpg
+- name: white-house-lawn-white-house-lawn-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-dali-two.jpg
+- name: carry-load-carryload-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-blue-brush.jpg
+- name: catacombs-catacombs-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-green-zuma.jpg
+- name: old-church-oldchurch-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-satan-red.jpg
+- name: oldcabin-oldcabin-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-far-away.jpg
+- name: bluelake-neo-instinct-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-neo-instinct-file-00-00-00-00.jpg
+- name: machine-road-machine-road-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-purple-pond.jpg
+- name: art-museum-art-museum-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-internet-numbers.jpg
+- name: gypsy-wagon-gypsywagon-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-nazi-poster.jpg
+- name: window-window-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-colorful-blocks.jpg
+- name: downtown-trucksilo-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-dark-dali.jpg
+- name: liberty-back-statue-liberty-back-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-kandinsky-bv.jpg
+- name: hollywood-building-hollywood-building-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-blue-circuit.jpg
+- name: liberty-back-statue-liberty-back-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-gan-vogh.jpg
 ---
 Sister Ruth Crop Walk.&nbsp;Key Elements For Auto And Short Term Loan Approval.&nbsp;Training Rides Begin For Martindales Mamma Jamma Fundraiser.&nbsp;New Jersey Tops Nevada In Sports Betting Volume In May.&nbsp;US, Taliban Open Doha Talks In Fresh Bid To End War.&nbsp;Refresh Your Summer With Delicious, Healthy Mocktails.&nbsp;Refresh Your Summer With Delicious, Healthy Mocktails.&nbsp;Workforce Development A Hot Topic During Roes Roundtable Discussions.&nbsp;
